--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Analysing Network Communications
-description: Portfolio activities provided by Google Cybersecurity course 2024. 
+description: Portfolio activities provided by Google Cybersecurity course 2024 | Emilio Mardones 
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
