--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: Analysing Network Communications
-description: Portfolio activities provided by Google Cybersecurity course 2024 | Emilio Mardones 
+description: Portfolio activities provided by Google Cybersecurity course 2024 | Emilio Mardones
+github_username:  Ofendor
+url: "https://ofendor.github.io/mimard_profile.github.io/"
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
